Add session token generation and validation for presigned POST requests
Signed-off-by: Romeo-mz